--- a/.github/workflows/repomd.yml
+++ b/.github/workflows/repomd.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   repomd:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
     - id: checkout
       uses: actions/checkout@v3
