Set forge.nethserver.org CNAME (#1)
Refs NethServer/dev#6791

--- a/.github/workflows/repomd.yml
+++ b/.github/workflows/repomd.yml
@@ -29,6 +29,7 @@ jobs:
         mv repodata.json .dst/
         cp -a $(ls -d */) .dst/
         cp README.md .dst/index.md
+        echo forge.nethserver.org > .dst/CNAME
         git add .dst/
         TREE=$(git write-tree --prefix=.dst)
         COMMIT=$(git commit-tree -m "${COMMIT_MESSAGE}" ${TREE})
