--- a/.github/workflows/repomd.yml
+++ b/.github/workflows/repomd.yml
@@ -29,7 +29,7 @@ jobs:
         mv -v repodata.json .dst/ns8/updates
         cp -av $(ls -d */) .dst/ns8/updates/
         cp -v README.md .dst/index.md
-        echo forge.nethserver.org > .dst/CNAME
+        echo forge.de-labrusse.fr > .dst/CNAME
         git add .dst/
         TREE=$(git write-tree --prefix=.dst)
         COMMIT=$(git commit-tree -m "${COMMIT_MESSAGE}" ${TREE})
